First cut of refactor.  Testing, javafx structure refactor, Build refactor.  Lots.